--- a/frontend/src/components/Table/Table.css
+++ b/frontend/src/components/Table/Table.css
@@ -51,7 +51,12 @@
   flex-basis: 20%;
   width: 20%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: stretch;
   align-items: center;
   padding: 10px;
+}
+
+.table-content .small-cell {
+  display: flex;
+  justify-content: center;
 }
