--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -33,3 +33,13 @@
   border-radius: 15px;
   cursor: pointer;
 }
+
+.navbar-links a {
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 700px) {
+  .navbar {
+    flex-direction: column;
+  }
+}
