--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -24,17 +24,8 @@
 
 .Homepage-form {
   align-self: center;
-  width: 80%;
-  margin: 0 1.5rem;
-}
-
-.Homepage-form input {
-  margin-top: 1rem;
   width: 100%;
-  height: 20px;
-  border-radius: 8px;
-  border: 1px solid rgb(148, 148, 148);
-  padding: 5px;
+  padding: 2rem;
 }
 
 .calendar-input {
@@ -52,6 +43,17 @@
 .Homepage-content h2 {
   font-size: 30px;
   margin: 1rem 0;
+}
+
+.Sidebar-submit {
+  align-self: flex-end;
+  padding: 10px 15px;
+  border-radius: 20px;
+  border: none;
+  background-color: #4741f2;
+  color: #f2f2f2;
+  margin-right: 2rem;
+  margin-bottom: 1rem;
 }
 
 @media only screen and (max-width: 1100px) {
@@ -74,5 +76,32 @@
   .calendar-input {
     display: block;
     margin: 1.5rem 0;
+  }
+
+  .Homepage {
+    margin: 1rem 1rem 0 1rem;
+  }
+
+  .Homepage-content {
+    padding: 0.5rem;
+  }
+
+  .Homepage-sidebar h2 {
+    font-size: 20px;
+  }
+
+  .Homepage-content h2 {
+    font-size: 20px;
+  }
+
+  .Homepage-form {
+    margin: 0;
+    padding: 0.5rem;
+    align-self: flex-start;
+  }
+
+  .Sidebar-submit {
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
